test added + candidte functionality
